--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,39 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>OnlineShoppingWebsite</title>
+  <title>Online Shopping</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- for icons -->
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+  <!-- ngx-bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+  
+  <link rel="shortcut icon" type="image/x-icon" href="https://www.godigit.com/etc/designs/godigit/images/fav.ico" />
+  <style>
+    .ikk {
+      position: absolute;
+      left: 36%;
+      top: 18%;
+    }
+
+    @media only screen and (max-width: 1200px) {
+      .ikk {
+        position: absolute;
+        left: 0;
+        top: 18%;
+
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>
+    <img class="ikk" src="https://d2h44aw7l5xdvz.cloudfront.net/assets/gif/yoga.gif" alt="mk">
+  </app-root>
 </body>
+
 </html>
